Mon May  8 14:34:21 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Moved mostly common implementation of test suite main() functions
	  into test_driver::main().

Fri May  5 18:55:31 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Pass MatchOptions object down to LocalMatch, rather than
	  interpreting at API level.

Fri May  5 16:55:57 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Add option to MatchOptions to set a maximum number of terms to
	  OR together in large probabalistic queries.

Thu May  4 16:58:08 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* ProgClient::get_mset() now returns actual results rather than
	  accidentally made up numbers.

Thu May  4 16:26:34 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* The testsuite driver now supports running a single test by name.

	* apitest and internaltest now support an extra argument which
	  specifies the name of a single test to run.

Tue May  2 18:56:20 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* get_mset() now actually asynchronous.

Tue May  2 18:22:31 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* The framework for making get_mset() asynch is there.

Tue May  2 16:21:57 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* prepare_match() is now actually asynchronous

Tue May  2 14:35:01 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Changed signature of Match::prepare_match() to allow for
	  asynchronous processing.

Fri Apr 28 18:55:12 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Begun process of making OmDatabaseGroup use reference counted
	  databases, rather than just the parameters, so that we can add
	  opened database objects to a database group.

Fri Apr 28 17:51:06 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Added configure checking for getopt.h

Fri Apr 28 17:17:23 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>
