@@ -4,7 +4,7 @@ AUTOMAKE_OPTIONS = foreign # don't fuss about GNU required files
 
 # Order is relvant: when building, tests must be at end
 # When installing, should install script and m4 stuff last, in case of failure
-SUBDIRS = autoconf include common \
+SUBDIRS = testsuite autoconf include common \
           backends api matcher languages net indexer . m4 \
 	  docs tests netprogs
 
