@@ -1,0 +1,9 @@
+## Process this file with automake to produce Makefile.in
+
+AUTOMAKE_OPTIONS = foreign # don't fuss about GNU required files
+
+INCLUDES = -I$(top_srcdir)/common
+
+noinst_LTLIBRARIES = libtest.la
+
+libtest_la_SOURCES = testsuite.cc
