@@ -1,3 +1,8 @@
+Mon May  8 16:33:16 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>
+
+	* Moved testsuite module to a new directory.  Tests within the
+	  other source directories should be able to link to it easily.
+
 Mon May  8 14:34:21 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>
 
 	* Moved mostly common implementation of test suite main() functions
